[project]
name = "sage-drop"
version = "0.2.1"
description = ""
authors = [
    {name = "Nikolay Leipi",email = "nikolay.semykin@googlemail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "prettytable (>=3.17.0,<4.0.0)",
    "click (>=8.3.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "sage_drop", from = "src"}]
include = [
    "app.py"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]

[project.scripts]
sage = 'sage_drop:cli'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
